# stm32_printer

./: .gitignore  CMakeLists.txt
inc/: periph_led.h  periph_stepper.h  stm32f4xx_it.h  sys_clock.h  sys_gpio.h  sys_timer.h
src/: main.cpp  periph_led.c  periph_stepper.c  stm32f4xx_it.c  sys_clock.c  sys_gpio.c  sys_timer.c
